syntax = "proto3";

package stocklet.auth.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/api/visibility.proto";
import "stocklet/auth/v1/types.proto";

option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/auth/v1;auth_v1";

// todo: implement
message GetJwksRequest {}
message GetJwksResponse {
  repeated JWK keys = 1;
}

message LoginPasswordRequest {
  string user_id = 1 [(google.api.field_behavior) = REQUIRED];
  string password = 2 [(google.api.field_behavior) = REQUIRED];
}

message LoginPasswordResponse {
  string detail = 1;
  AuthToken data = 2;
}

message SetPasswordRequest {
  string user_id = 1 [(google.api.field_behavior) = REQUIRED];
  string password = 2 [(google.api.field_behavior) = REQUIRED];
}

message SetPasswordResponse {
  string detail = 1;
}

// Internal Request Payload
message DeleteUserDataRequest {}

// Internal Request Payload
message DeleteUserDataResponse {}

// Auth Service
service AuthService {
  rpc GetJwks(GetJwksRequest) returns (GetJwksResponse) {
    option (google.api.http) = {
      get: "/v1/auth/jwks"
    };
  }

  rpc LoginPassword(LoginPasswordRequest) returns (LoginPasswordResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  rpc SetPassword(SetPasswordRequest) returns (SetPasswordResponse) {
    option (google.api.http) = {
      post: "/v1/auth/password"
      body: "*"
    };
  }

  // internal method
  rpc DeleteUserData(DeleteUserDataRequest) returns (DeleteUserDataResponse) {
    option (google.api.method_visibility).restriction = "INTERNAL";
  }
}
